Corrections adaptation mobile fiche livre

--- a/ressources/liaisons/scss/layout/_ficheLivre.scss
+++ b/ressources/liaisons/scss/layout/_ficheLivre.scss
@@ -5,6 +5,7 @@ ul.elements_fiche {
   align-items: center;
   margin-bottom: 75px;
   flex-direction: column;
+  padding-left: 0px;
 }
 div.elements_droite{
   padding-right: 40px;
@@ -19,6 +20,7 @@ div.elements_droite{
 @media(min-width: 1000px){
   ul.elements_fiche {
     flex-direction: row;
+    padding-left: 40px;
   }
   div.elements_droite {
     margin-top: 0px;
